# copilot-more-automated

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  refresh-token.sh  token-cli.sh
copilot_more/: logger.py  proxy.py  server.py  token.py  utils.py
tests/: test_token.py  test_utils.py
